--- a/Document/draft.tex
+++ b/Document/draft.tex
@@ -6,7 +6,7 @@
 
 %\documentclass[a4paper, 10pt, conference]{ieeeconf}      % Use this line for a4 paper
 
-%\IEEEoverridecommandlockouts                              % This command is only needed if
+\IEEEoverridecommandlockouts                              % This command is only needed if
                                                           % you want to use the \thanks command
 
 \overrideIEEEmargins                                      % Needed to meet printer requirements.
@@ -27,8 +27,9 @@
 \title{\LARGE \bf Interprocess Communication for Robotics Applications
 }
 
-\author{Edward M. Roderick}
-
+\author{Edward M. Roderick$^{*}$
+\thanks{$^{*}$Author is affilited with George Mason University, Fairfax VA, 22030, USA. {\tt\small eroderi2@gmu.edu.}}%
+}
 \begin{document}
 
 
