draft thru ros/zmq results

--- a/Document/draft.tex
+++ b/Document/draft.tex
@@ -43,6 +43,9 @@
 \input{intro.tex}
 \input{background.tex}
 \input{test.tex}
+\input{results.tex}
+\input{implementation.tex}
+\input{conclusions.tex}
 
 \addtolength{\textheight}{-12cm}   % This command serves to balance the column lengths
                                   % on the last page of the document manually. It shortens
@@ -53,10 +56,6 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{APPENDIX}
-
-Placeholder for appendicies
-
 \section*{ACKNOWLEDGMENT}
 
 placeholder for acknowledgements
