--- a/Document/background.tex
+++ b/Document/background.tex
@@ -33,7 +33,7 @@ UDP offers one quick directional communication between processes. UDP supports c
 
 \subsection{ZeroMQ}
 
-ZeroMQ\footnote{Available at www.zeromq.org} (ØMQ) is a messaging system that extends on the foundations of sockets. It provides additional functionality to TCP by sending messages to a system topology instead of specific IP addresses. ØMQ prevents sending to specific IP addresses by design. The available messaging patterns is open ended. Common patterns include publish/subscribe and request/reply. Figure \ref{fig:zmq top} below shows examples of how toplogies can be arranged.
+ZeroMQ\footnote{Available at www.zeromq.org} (ZMQ) is a messaging system that extends on the foundations of sockets. It provides additional functionality to TCP by sending messages to a system topology instead of specific IP addresses. ZMQ prevents sending to specific IP addresses by design. The available messaging patterns is open ended. Common patterns include publish/subscribe and request/reply. Figure \ref{fig:zmq top} below shows examples of how toplogies can be arranged.
 
 \begin{figure}[thpb]
  \centering
@@ -42,9 +42,9 @@ ZeroMQ\footnote{Available at www.zeromq.org} (ØMQ) is a messaging system that e
   \label{fig:zmq top}
 \end{figure} 
 
-Only one messaging pattern is allowed for a topology and they cannot be interconnected. This guarentees that data will arrive at their intended location(s). ØMQ separates its stack into end to end and hop by hop layers. Unlike TCP/IP, each ØMQ end to end protocol has its own hop by hop protocol\cite{ZMQTHEORY}. This allows each specific messaging pattern to have their own routing functionality. Bidirectional messages can be sent to specific nodes in the topology. Each intermediary node can determine if downstream sections of the network are unreachable and can signal the original client to resend now or wait until connectivity has been reestablished. 
+Only one messaging pattern is allowed for a topology and they cannot be interconnected. This guarentees that data will arrive at their intended location(s). ZMQ separates its stack into end to end and hop by hop layers. Unlike TCP/IP, each ZMQ end to end protocol has its own hop by hop protocol\cite{ZMQTHEORY}. This allows each specific messaging pattern to have their own routing functionality. Bidirectional messages can be sent to specific nodes in the topology. Each intermediary node can determine if downstream sections of the network are unreachable and can signal the original client to resend now or wait until connectivity has been reestablished. 
 
-ØMQ provides synchronization for data in multithreaded applications. This functionality is hidden from the developer and allows for complex, scalable messaging in multithreaded systems. Common methods for dealing with synchronization (mutex locks, etc) can block threads when scaled to high number of processes. ØMQ absracts complex lock free synchronization methods behind the familiar interface of sockets\cite{MULTITHREADZMQ}.
+ZMQ provides synchronization for data in multithreaded applications. This functionality is hidden from the developer and allows for complex, scalable messaging in multithreaded systems. Common methods for dealing with synchronization (mutex locks, etc) can block threads when scaled to high number of processes. ZMQ absracts complex lock free synchronization methods behind the familiar interface of sockets\cite{MULTITHREADZMQ}.
 
 \subsection{ROS}
 
