--- a/Document/draft.tex
+++ b/Document/draft.tex
@@ -42,6 +42,7 @@
 \input{abstract.tex}
 \input{intro.tex}
 \input{background.tex}
+\input{testprocedures.tex}
 \input{test.tex}
 \input{results.tex}
 \input{implementation.tex}
