--- a/Document/intro.tex
+++ b/Document/intro.tex
@@ -2,4 +2,4 @@
 
 As modern robotic systems grow in complexity, it becomes increasingly beneficial to implement a multi-process control system. This provides a modular system architecture. A modular architecture protects the overall system from individual components failing. Critical system processes can be allocated additional resources to ensure continued operation during a partial system failure. By predefining the inputs and outputs for each subsystem, multiple teams of designers can use differing languages, allowing for optimization of each task. Additionally, the overall system can be distrubted across a variety of hardware (full computers, single board computers, microcontrollers). 
 
-Many IPC options are available to designers and each must be evaluated on a per system basis to determine the best candidate. This paper will focus on evaluating several mainstream options and how they apply to design metrics of robotic systems. As robots operate in real time, the latency and data integrity of each communication step is of critical importance. For complex systems (humanoids, robots operating in proximity with humans, etc) with multiple processes running concurrently, communication delay can results in actuators responding to obsolete data. This paper serves to provide a guide to evaluating the capabilites of Sockets, ACH, ZeroMQ and ROS. 
+Many IPC options are available to designers and each must be evaluated on a per system basis to determine the best candidate. This paper will focus on evaluating several mainstream options and how they apply to design metrics of robotic systems. As robots operate in real time, the latency and data integrity of each communication step is of critical importance. For complex systems (humanoids, robots operating in proximity with humans, etc) with multiple processes running concurrently, communication delay can results in actuators responding to obsolete data. This paper serves to provide a guide to evaluating the capabilites of Sockets, Shared Memory, and ROS. 
